--- a/fortune/fortune.yaml
+++ b/fortune/fortune.yaml
@@ -43,6 +43,26 @@ spec:
             - name: APP_PORT
               value: "3000"
           ports:
-            - name: http
+            - name: fortune-port
               containerPort: 3000
 ---
+
+apiVersion: v1
+kind: Service
+
+metadata:
+  name: fortune-svc
+  namespace: myns
+  labels:
+    name: fortune-svc
+    version: v1
+
+spec:
+  type: LoadBalancer
+  selector:
+    name: fortune
+    version: v1
+  ports:
+    - name: http
+      port: 80
+      targetPort: fortune-port
