--- a/northwind/workshop2/database.yaml
+++ b/northwind/workshop2/database.yaml
@@ -4,9 +4,9 @@ apiVersion: v1
 kind: Namespace
 
 metadata:
-  name: nwdb
+  name: nwapp
   labels:
-    name: nwdb
+    name: nwapp
     version: v1
 
 ---
@@ -16,10 +16,10 @@ kind: Secret
 
 metadata:
   name: nwdb-secret
-  namespace: nwdb
+  namespace: nwapp
 
 data:
-  db_password: changeit
+  db-password: Y2hhbmdlaXQ=
 
 ---
 
@@ -28,37 +28,57 @@ kind: Deployment
 
 metadata:
   name: nwdb-deploy
+  namespace: nwapp
   labels:
-    name: nwdb-pod
+    name: nwdb-deploy
     version: v1
 
 spec:
-   replicas: 1
-   minReadySeconds: 30
-   selector:
-      matchLabels:
+  replicas: 1
+  minReadySeconds: 30
+  selector:
+    matchLabels:
+      name: nwdb-pod
+      version: v1
+  template:
+    metadata:
+      name: nwdb-pod
+      labels:
         name: nwdb-pod
         version: v1
-   template:
-      metadata:
-        name: nwdb-pod
-        labels:
-            name: nwdb-pod
-            version: v1
-      spec:
-         containers:
-          - name: nwdb-container
-            image: stackupiss/northwind-db:v1
-            imagePullPolicy: IfNotPresent
-            env:
-              - name: MYSQL_ROOT_PASSWORD
-                valueFrom:
-                  configMapKeyRef:
-                    name: nwdb-secret
-                    key: db-password
-            ports:
-              - name: mysql-ports
-                containerPort: 3306
+    spec:
+      containers:
+        - name: nwdb-container
+          image: stackupiss/northwind-db:v1
+          imagePullPolicy: IfNotPresent
+          env:
+            - name: MYSQL_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: nwdb-secret
+                  key: db-password
+          ports:
+            - name: nwdb-port
+              containerPort: 3306
+
+---
+
+apiVersion: v1
+kind: Service
+
+metadata:
+  namespace: nwapp
+  name: nwdb-svc
+
+spec:
+  selector:
+    name: nwapp
+    version: v1
+  type: ClusterIP
+  ports:
+    - name: nwdb-svc-port
+      port: 3306
+      targetPort: nwdb-port
 
 ---
 
